WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243409
REGRESSION(
249632@main
): wpt /service-workers/service-worker/claim-worker-fetch.https.html
https://bugs.webkit.org/show_bug.cgi?id=243409
Summary
REGRESSION(249632@main): wpt /service-workers/service-worker/claim-worker-fet...
Sam Sneddon [:gsnedders]
Reported
2022-08-01 09:55:32 PDT
See
https://wpt.fyi/results/service-workers/service-worker/claim-worker-fetch.https.html?label=master&product=safari-15.6%20%2817613.3.9.1.5%29%5Bstable%5D&product=safari%5Bexperimental%5D&aligned&view=subtest
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-01 09:55:45 PDT
<
rdar://problem/97919820
>
Sam Sneddon [:gsnedders]
Comment 2
2022-08-01 09:56:22 PDT
Specifically, given I forgot what I was gonna write in the description, the `fetch() in blob URL Worker should be intercepted after the client is claimed.` subtest has regressed.
Chris Dumez
Comment 3
2022-08-09 11:47:30 PDT
I think the issue is that in SWServer::claim(), doRegistrationMatching() returns false for the blob URL worker client since we call doRegistrationMatching() with clientData.url which is a Blob URL.
Chris Dumez
Comment 4
2022-08-09 11:50:45 PDT
Relevant spec text:
https://www.w3.org/TR/service-workers/#control-and-use-worker-client
Chris Dumez
Comment 5
2022-08-09 12:27:12 PDT
Spec doesn't actually deal properly with a service worker claiming a client worker that is a Blob URL but there is a spec bug about it: -
https://github.com/w3c/ServiceWorker/issues/1554
Chris Dumez
Comment 6
2022-08-09 13:15:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3164
EWS
Comment 7
2022-08-11 12:13:27 PDT
Committed
253345@main
(497df5ae79f3): <
https://commits.webkit.org/253345@main
> Reviewed commits have been landed. Closing PR #3164 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug