Cherry-pick 497df5ae79f3. rdar://problem/97919820

REGRESSION(249632@main): wpt /service-workers/service-worker/claim-worker-fetch.https.html
    https://bugs.webkit.org/show_bug.cgi?id=243409
    <rdar://97919820>

    Reviewed by Brady Eidson.

    249632@main added support for registering workers as service worker clients. However, there is an issue
    in the specification (https://github.com/w3c/ServiceWorker/issues/1554) making it so that Blob URL
    workers cannot be claimed by a service worker. This is because the service worker registration matching
    relies on the client URL and matching will fail if the client URL is a Blob URL.

    To address the issue, I updated SWServer::claim() to use the owner's URL was client URL for the purpose
    of registration matching whenever the client URL is a Blob URL. This makes it so that Blob URL clients
    can be claimed by a service worker whenever their owner can be.

    * LayoutTests/http/wpt/service-workers/claim-worker-fetch-without-nesting.https-expected.txt: Added.
    * LayoutTests/http/wpt/service-workers/claim-worker-fetch-without-nesting.https.html: Added.
    The upstream WPT test that regressed is skipped in WebKit because several of its subtests rely on
    nested worker, which WebKit doesn't support, making the test time out. To improve test coverage, I
    copied the upstream tests to http/wpt/service-workers/ and dropped the nested worker subtests.

    * Source/WebCore/workers/WorkerGlobalScope.cpp:
    * Source/WebCore/workers/WorkerGlobalScope.h:
    (WebCore::WorkerGlobalScope::ownerURL const):
    * Source/WebCore/workers/WorkerMessagingProxy.cpp:
    (WebCore::WorkerMessagingProxy::startWorkerGlobalScope):
    * Source/WebCore/workers/WorkerThread.cpp:
    (WebCore::WorkerParameters::isolatedCopy const):
    * Source/WebCore/workers/WorkerThread.h:
    * Source/WebCore/workers/service/ServiceWorkerClientData.cpp:
    (WebCore::ServiceWorkerClientData::isolatedCopy const):
    (WebCore::ServiceWorkerClientData::isolatedCopy):
    (WebCore::ServiceWorkerClientData::from):
    * Source/WebCore/workers/service/ServiceWorkerClientData.h:
    (WebCore::ServiceWorkerClientData::encode const):
    (WebCore::ServiceWorkerClientData::decode):
    * Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:
    (WebCore::generateWorkerParameters):
    * Source/WebCore/workers/service/server/SWServer.cpp:
    (WebCore::SWServer::claim):
    * Source/WebCore/workers/shared/context/SharedWorkerThreadProxy.cpp:
    (WebCore::generateWorkerParameters):
    * Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
    (WebKit::WebSWServerConnection::controlClient):

    Canonical link: https://commits.webkit.org/253345@main

Canonical link: https://commits.webkit.org/252432.233@safari-7614-branch